# foundation-sunshine

./: .gitignore  .gitmodules  README.de.md  README.en.md  README.fr.md  README.ja.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: BUFFPLUM_RELEASES.md  RELEASE_TEMPLATE.md
.github/workflows/: main.yml  sign-and-repackage.yml
cmake/compile_definitions/: common.cmake  windows.cmake
cmake/packaging/: FetchDriverDeps.cmake  FetchGUI.cmake  common.cmake  sunshine.iss.in  windows.cmake  windows_innosetup.cmake  windows_nsis.cmake
cmake/prep/: constants.cmake  options.cmake
cmake/targets/: common.cmake
docs/: building.md  file-transfer.md  rtsp_launch_ticket_manager.md  tray-protocol.md  vdd-prerequisite-closure.md  vulkan_hdr_bridge.md  windows_directory_mapping_design.md  windows_directory_mapping_hardening_notes.md  windows_vdd_sealed_frame_channel.md
scripts/: publish-buffplum-releases.ps1  vdd_rc_smoke.ps1
src/: config.cpp  config.h  confighttp.cpp  globals.h  http_util.h  httpcommon.cpp  httpcommon.h  input.cpp  input_activity.cpp  input_activity.h  launch_session_manager.cpp  launch_session_manager.h  main.cpp  nvhttp.cpp  nvhttp_stream_start.cpp  perf_recorder.cpp  perf_recorder.h  process.cpp  rtsp.cpp  rtsp.h  stream.cpp  stream.h  video.cpp  video.h  webhook.cpp
src/amf/: amf_avcodec_compat.cpp  amf_avcodec_compat.h  amf_config.h  amf_d3d11.cpp  amf_d3d11.h
src/display_device/: parsed_config.cpp  parsed_config.h  session.cpp  session.h  vdd_ioctl.cpp  vdd_ioctl.h  vdd_utils.cpp  vdd_utils.h
src/file_mapping/: file_mapping.cpp  file_mapping.h  file_mapping_config.cpp  file_mapping_http.cpp  file_mapping_http.h  file_mapping_operations.cpp  file_mapping_operations.h  file_mapping_rpc.cpp  file_mapping_rpc.h  file_mapping_store.cpp  file_mapping_ws.cpp  file_mapping_ws_session.cpp  service.cpp  service.h
src/nvenc/win/impl/: nvenc_d3d11_native.cpp  nvenc_d3d11_on_cuda.cpp
src/nvhttp/: display_scale.cpp  pairing.cpp  pairing.h  sessions.cpp  sessions.h  tls_client_identity_store.h
src/platform/: common.h
src/platform/windows/: audio.cpp  display.h  display_base.cpp  display_vdd.cpp  display_vram.cpp  misc.cpp  misc.h  vdd_frame_channel.h  vulkan_hdr_bridge_session.cpp  vulkan_hdr_bridge_session.h
src/tray/: system_tray.cpp  system_tray.h  system_tray_i18n.cpp  system_tray_i18n.h  tray_http.cpp  tray_http.h  tray_state.cpp  tray_state.h
tests/: CMakeLists.txt
tests/unit/: test_audio.cpp  test_file_mapping.cpp  test_file_mapping_config.cpp  test_file_mapping_http.cpp  test_file_mapping_operations.cpp  test_file_mapping_rpc.cpp  test_file_mapping_store.cpp  test_file_mapping_ws_network.cpp  test_http_util.cpp  test_rtsp.cpp  test_stream_session_observability.cpp  test_tls_client_identity_store.cpp  test_tray_state.cpp  test_vdd_prerequisite.cpp  test_vdd_safety.cpp
tools/: CMakeLists.txt  check_vdd_ioctl_abi.ps1  full_disk_file_transfer_smoke.cpp  sunshinesvc.cpp  vdd_frame_channel_probe.cpp  vdd_sealed_channel_stress.ps1
(+120 files in other folders)
